--- a/style/portfo.css
+++ b/style/portfo.css
@@ -162,11 +162,25 @@ footer input[ type="text"], footer input[type="email"], footer textarea{
   .skills-conteiner, 
   .resume-container,
    .footer-container,
-  .about-items{
+  .about-items, .banner
+  ,nav{
     flex-direction: column;
+  }
+  .head{
+    background-image: none;
+  }
+  .banner{
+    margin: 20px;
+  }
+
+  .banner-pic{
+    width: 100%;
   }
   .about{
     padding:20px;
+  }
+  .btn-primary{
+    margin-bottom: 20px;
   }
   
 }
